--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,347 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" >
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="favicon" th:href="@{/assets/images/favicon.png}">
-    <link rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/assets/css/font-awesome.min.css}">
-    <link rel="stylesheet" th:href="@{/assets/css/bootstrap-theme.css}" media="screen">
-    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
-    <!--轮播图图-->
-    <link rel='stylesheet' id='camera-css' th:href='@{/assets/css/camera.css}' type='text/css' media='all'>
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script th:src="@{/assets/js/html5shiv.js}"></script>
-    <script th:src="@{/assets/js/respond.min.js}"></script>
-    <![endif]-->
+    <link rel="favicon" th:href="@{/images/favicon.png}">
+    <link rel="stylesheet/less" th:href="@{/css/customize-style.less}">
+    <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
 </head>
 <body>
-
-<div class="head-box text-right" style="padding:0px;">
-    <div class="header-user-info">
-        <div class="header-user-info-left">XXX</div>
-        <div class="header-user-info-right">
-            <a href="x">登录</a>
-            <a href="x">注册</a>
-        </div>
-        <div class="clear"></div>
-        <!--CLEAR FLOATS-->
-    </div>
-</div>
-
-<div class="navbar navbar-inverse">
-    <div class="container">
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav pull-left mainNav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-
-                <li><a href="projects.html">Projects</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="sidebar-right.html">Right Sidebar</a></li>
-                        <li><a href="#">Dummy Link1</a></li>
-                        <li><a href="#">Dummy Link2</a></li>
-                        <li><a href="#">Dummy Link3</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">Contact</a></li>
-
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</div>
-<!-- /.navbar -->
-0000000000000000000000000000000
-<!-- Header -->
-<header id="head">
-    <div class="container">
-        <div class="fluid_container">
-            <div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-
-                <div th:data-thumb="@{/assets/images/slides/thumbs/img1.jpg}" th:data-src="@{/assets/images/slides/img1.jpg}">
-                </div>
-                <div data-thumb="assets/images/slides/thumbs/img2.jpg" data-src="assets/images/slides/img2.jpg">
-                </div>
-                <div data-thumb="assets/images/slides/thumbs/img3.jpg" data-src="assets/images/slides/img3.jpg">
-                </div>
-            </div><!-- #camera_wrap_3 -->
-        </div><!-- .fluid_container -->
-    </div>
-</header>
-<!-- /Header -->
-
-<div class="head-box" style="margin-top:-20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-
-                <h2 class="text-center text-uppercase last">检索 </h2>
-
-                <div class="search-panel">
-                    <form class="form-inline" role="form">
-                        <div class="form-group">
-                            <input type="text" class="form-control" style="width: 500px;" placeholder="请输入检索关键词" autocomplete="off">
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" class="btn btnsearch" value="检索"/>
-                        </div>
-                    </form>
-                </div>
-            </div><!-- end .col-sm-12 -->
-        </div><!-- ene .row -->
-    </div>
-</div>
-
-<section class="news-box top-margin">
-    <div class="container">
-        <div class="row">
-            <div class="section-heading">
-                <h2>Current Projects</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="newsBox">
-                    <div class="thumbnail">
-                        <figure><img src="assets/images/news2.jpg" alt=""></figure>
-                        <div class="caption maxheight2">
-                            <div class="box_inner">
-                                <div class="box">
-                                    <p class="title"><strong>CONCEPT</strong></p>
-                                    <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum
-                                        molestie lacuiirhs. Aenean.</p>
-                                </div>
-                                <div>
-                                    <a href="#" class="btn-inline">more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="newsBox">
-                    <div class="thumbnail">
-                        <figure><img src="assets/images/news3.jpg" alt=""></figure>
-                        <div class="caption maxheight2">
-                            <div class="box_inner">
-                                <div class="box">
-                                    <p class="title"><strong>DESIGN</strong></p>
-                                    <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum
-                                        molestie lacuiirhs. Aenean.</p>
-                                </div>
-                                <div>
-                                    <a href="#" class="btn-inline">more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="newsBox">
-                    <div class="thumbnail">
-                        <figure><img src="assets/images/news4.jpg" alt=""></figure>
-                        <div class="caption maxheight2">
-                            <div class="box_inner">
-                                <div class="box">
-                                    <p class="title"><strong>INSTALLATION</strong></p>
-                                    <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum
-                                        molestie lacuiirhs. Aenean.</p>
-                                </div>
-                                <div>
-                                    <a href="#" class="btn-inline">more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<header class="header" th:include="component/nav :: nav-fragment"></header>
+<section class="container">
+    <div id="app">
+        {{message}}
     </div>
 </section>
+<footer class="footer" th:include="component/footer :: footer-fragment"></footer>
 
-<section class="news-box top-margin">
-    <div class="container">
-        <div class="row">
-            <div class="section-heading">
-                <h2>Upcoming Projects</h2>
-            </div>
-
-
-            <div class="col-md-3 mb2em">
-                <div class="price-block">
-                    <div class="price-gd-top">
-                        <img src="assets/images/r1.jpg" alt=" " >
-                        <h4>Deluxe Room</h4>
-                    </div>
-                    <div class="price-gd-bottom">
-                        <div class="price-list">
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="price-selet">
-                            <h3><span>$</span>320</h3>
-                            <a href="#availability-agileits" class="scroll">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb2em">
-                <div class="price-block">
-                    <div class="price-gd-top">
-                        <img th:src="@{/assets/images/r1.jpg}" alt=" " >
-                        <h4>Deluxe Room</h4>
-                    </div>
-                    <div class="price-gd-bottom">
-                        <div class="price-list">
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="price-selet">
-                            <h3><span>$</span>320</h3>
-                            <a href="#availability-agileits" class="scroll">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb2em">
-                <div class="price-block">
-                    <div class="price-gd-top">
-                        <img th:src="@{/assets/images/r1.jpg}" alt=" " >
-                        <h4>Deluxe Room</h4>
-                    </div>
-                    <div class="price-gd-bottom">
-                        <div class="price-list">
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="price-selet">
-                            <h3><span>$</span>320</h3>
-                            <a href="#availability-agileits" class="scroll">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb2em">
-                <div class="price-block">
-                    <div class="price-gd-top">
-                        <img th:src="@{/assets/images/r1.jpg}" alt=" " >
-                        <h4>Deluxe Room</h4>
-                    </div>
-                    <div class="price-gd-bottom">
-                        <div class="price-list">
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="price-selet">
-                            <h3><span>$</span>320</h3>
-                            <a href="#availability-agileits" class="scroll">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb2em">
-                <div class="price-block">
-                    <div class="price-gd-top">
-                        <img th:src="@{/assets/images/r1.jpg}" alt=" " >
-                        <h4>Deluxe Room</h4>
-                    </div>
-                    <div class="price-gd-bottom">
-                        <div class="price-list">
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="price-selet">
-                            <h3><span>$</span>320</h3>
-                            <a href="#availability-agileits" class="scroll">Book Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-<footer id="footer">
-    <div class="footer2">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-12 panel">
-                    <div class="panel-body">
-                        <p class="text-center">
-                            Copyright &copy; Company name All rights reserved. <a href="#" target="_blank">模板之家</a>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            <!-- /row of panels -->
-        </div>
-    </div>
-</footer>
-
-<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-<script th:src="@{/assets/js/modernizr-latest.js}"></script>
-<script th:src="@{/assets/js/jquery.min.js}"></script>
-<script th:src="@{/assets/js/fancybox/jquery.fancybox.pack.js}"></script>
-
-<script th:src="@{/assets/js/jquery.mobile.customized.min.js}"></script>
-<script th:src="@{/assets/js/jquery.easing.1.3.js}"></script>
-<script th:src="@{/assets/js/camera.min.js}"></script>
-<script th:src="@{/assets/js/bootstrap.min.js}"></script>
-<script th:src="@{/assets/js/custom.js}"></script>
 <script>
-    jQuery(function () {
-
-        jQuery('#camera_wrap_4').camera({
-            height: '600',
-            loader: 'bar',
-            pagination: false,
-            thumbnails: false,
-            hover: false,
-            opacityOnGrid: false,
-            imagePath: 'assets/images/'
-        });
-
-    });
+    new Vue({
+        el: '#app',
+        data: {message: 'aaa'}
+    })
 </script>
-
 </body>
 </html>
