--- a/src/main/resources/static/css/common-style.less
+++ b/src/main/resources/static/css/common-style.less
@@ -28,15 +28,14 @@ table {
 }
 
 input {
-  border: 1px solid #eee;
+  border: 1px solid #666;
   padding: 0;
   margin: 0;
-  line-height: 1.5em;
   height: 1.5em;
-  display: block;
 }
 
 @color-info: #2d8cf0;
+@color-nav: #1D64B4;
 @color-success: #19be6b;
 @color-warn: #ff9900;
 @color-error: #ed3f14;
@@ -51,11 +50,12 @@ input {
 @color-disabled: #C0C4CC;
 @color-border: #DCDFE6;
 @color-divider: #E4E7ED;
-@color-bg: #f0eff5;
+@color-bg: #f7faff;
 @color-blue:#1d365d;
 
 @color-bg-opacity: rgba(0, 0, 0, .2);
 
+@color-black: #111;
 @color-white: #fff;
 @color-map-bg: #f4f9fd;
 
