--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="favicon" th:href="@{/images/favicon.png}">
-    <link rel="stylesheet/less" th:href="@{/css/customize-style.less}">
+    <link rel="favicon" th:href="@{/static/images/favicon.png}">
+    <link rel="stylesheet" th:href="@{/static/swiper/swiper.css}">
+    <link rel="stylesheet/less" th:href="@{/static/css/customize-style.less}">
     <script src="https://cdn.bootcss.com/less.js/3.10.3/less.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+    <script th:src="@{/static/swiper/swiper.js}"></script>
 </head>
 <body>
 <header class="header" th:include="component/nav :: nav-fragment"></header>
@@ -18,7 +20,25 @@
     </div>
 </section>
 <footer class="footer" th:include="component/footer :: footer-fragment"></footer>
-
+<!-- Initialize Swiper -->
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+            delay: 2500,
+            disableOnInteraction: false,
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+</script>
 <script>
     new Vue({
         el: '#app',
