--- a/src/main/resources/static/css/customize-style.less
+++ b/src/main/resources/static/css/customize-style.less
@@ -1,72 +1,71 @@
 @import 'common-style.less';
 
-html,body {
-  background: @color-bg;
+html, body {
+  background: #f6f7f8;
   height: 100%;
   width: 100%;
   position: relative;
+
 }
-.box{
+
+.box {
   display: flex;
   flex-direction: column;
   height: 100%;
 
   .header {
-    height: 20%;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
 
-    .header-top {
-      height: 60%;
-      width: 90%;
-      margin: 0 auto;
+    .left {
+      width: 20%;
+      line-height: 150px;
+      text-align: center;
+      font-size: 36px;
+      color: #ff0000;
 
-      div {
-        float: left;
-        width: 33.3333%;
-        overflow: hidden;
+      background: #EEE url(data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAHklEQVQImWNkYGBgYGD4//8/A5wF5SBYyAr+//8PAPOCFO0Q2zq7AAAAAElFTkSuQmCC) repeat;
+      text-shadow: 5px -5px black, 4px -4px white;
+      font-weight: bold;
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+    }
 
-        h1 {
-          font-size: 28px;
-          color: @color-success;
-        }
+    .center {
+      display: flex;
+      width: 60%;
+      align-items: center;
+      justify-content: center;
+      height: 150px;
 
-      }
-
-      .right {
-        text-align: right;
-      }
-
-      .left {
+      form {
         display: flex;
-        align-items: center;
-        height: 100%;
-      }
-
-      .center {
-        text-align: center;
-        display: flex;
-        align-items: center;
         justify-content: center;
-        height: 100%;
-
-        input[type=text] {
-          height: 30px;
-          width: 20em;
-          padding: 0 5px;
-        }
-
-        input[type=submit], input[type=button], button {
-          height: 32px;
-          padding: 0px 15px;
-          cursor: pointer;
-          background: @color-success;
-          color: @color-white;
-          font-weight: bold;
-          border: 0;
-          border: none;
-          margin-left: -6px;
-        }
+        width: 100%;
       }
 
+      input[type=text] {
+        height: 36px;
+        width: 45%;
+        padding: 3px 15px;
+      }
+
+      input[type=submit], input[type=button], button {
+        height: 44px;
+        padding: 0px 35px;
+        cursor: pointer;
+        background: @color-success;
+        color: @color-white;
+        font-weight: bold;
+        border: 0;
+        border: none;
+        margin-left: 40px;
+        font-size: 16px;
+      }
+    }
+
+    .right {
       span {
         background: @color-success;
         padding: 8px 15px;
@@ -78,141 +77,76 @@ html,body {
         padding: 8px 15px;
         line-height: 35px;
       }
-    }
 
-    .header-nav {
-      background: @color-nav;
-      height: 40%;
-
-      .header-nav-content {
-        width: 90%;
-        margin: 0 auto;
-        height: 100%;
-
-        & > ul {
-          display: flex;
-          height: 100%;
-
-          /*直接子元素 & > li*/
-
-          & > li:hover ul {
-            height: auto; /*这个地方固定值才会显示动画，鼠标移上来让二级导航显示*/
-          }
-
-          & > li > a {
-            padding: 0px 60px;
-            color: @color-white;
-            display: flex;
-            align-items: center;
-            height: 100%;
-            font-size: 1.4em;
-            transition: font-weight 200ms; /*200毫秒变化*/
-
-            &:hover, &:visited, &.active {
-              background: @color-warn;
-              text-shadow: 2px 3px 2px #54ff44;
-
-              //transform: rotate(45deg);
-              //-webkit-transform: rotate(45deg);
-              //-moz-transform: rotate(45deg);
-              //-o-transform: rotate(45deg);
-              //filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=4.5);
-              //transition: font-size 200ms;
-              //transform: scale(1.1);
-              font-weight: bold;
-            }
-
-            /*接父级元素，编译后效果 ul>li:nth-child(1)*/
-            //&:nth-child(1) {
-            //  padding-left: 0;
-            //}
-            //
-            //&:nth-last-child {
-            //  padding-right: 0;
-            //}
-          }
-
-          //ul {
-          //  display: flex;
-          //  flex-direction: column;
-          //  background: @color-nav;
-          //  overflow: hidden;
-          //  z-index: 999;
-          //  height: auto;
-          //  /*transition: property duration timing-function delay;*/
-          //  transition: all 500ms;
-          //
-          //  & > li > a {
-          //    flex: 0 0 auto;
-          //    padding: 5px 20px;
-          //    width: 100%;
-          //    display: inline-block;
-          //    color: @color-white;
-          //    line-height: 6%;
-          //    font-size: 1.4em;
-          //    transition: font-weight 200ms; /*200毫秒变化*/
-          //
-          //    &:hover, &:visited {
-          //      background: @color-warn;
-          //      text-shadow: 2px 3px 2px #54ff44;
-          //      font-weight: bold;
-          //    }
-          //  }
-          //}
-        }
-      }
-    }
-
-    .header-banner {
-      height: 200px;
-      background: #f00;
-
-      .swiper-container {
-        width: 100%;
-        height: 100%;
-
-      }
-
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
+      a:hover {
+        color: @color-error;
+        font-weight: bold;
       }
     }
   }
 
-  .container {
-    background: @color-info;
-    flex: 1;
+  .nav {
+    height: 80px;
+    background: @color-nav;
+
+    .header-nav {
+      width: 80%;
+      margin: 0 auto;
+      height: 100%;
+
+      & > ul {
+        display: block;
+        height: 100%;
+
+        & > li {
+          float: left;
+          min-width: 150px;
+          height: 100%;
+
+          & > a {
+            line-height: 80px;
+            text-align: center;
+            background: #ffc51d;
+            width: 100%;
+            height: 100%;
+            display: block;
+            font-size: 18px;
+            color: #111;
+          }
+
+          & > a:hover, a.active {
+            background: #ffad15;
+            font-weight: bold;
+            color: #111;
+          }
+        }
+
+      }
+    }
+  }
+
+  .swiper {
+    height: 300px;
+    background: #409EFF;
+  }
+
+  .content {
+    flex-grow: 1;
+    background: #1d365d;
   }
 
   .footer {
-    height: 10%;
-    background: @color-blue;
-    line-height: 10%;
-    text-align: center;
+    height: 40px;
+    border-top: 1px solid #C0C4CC;
 
-    a, a:visited, a:link {
-      color: @color-white;
-    }
+    .footer-content {
+      text-align: center;
+      line-height: 40px;
 
-    a:hover, a:active {
-      font-weight: bold;
-      font-size: 1.1em;
+      a {
+        color: #000;
+        font-weight: bold;
+      }
     }
   }
 
