--- a/src/main/resources/static/css/customize-style.less
+++ b/src/main/resources/static/css/customize-style.less
@@ -111,13 +111,11 @@ html, body {
             height: 100%;
             display: block;
             font-size: 18px;
-            color: #111;
           }
 
-          & > a:hover, a.active {
-            background: #ffad15;
+          & > a:hover {
+            background: #ffc51d;
             font-weight: bold;
-            color: #111;
           }
         }
 
